Fix: Horizontal Scroll is no longer possible

--- a/src/main-page/side-style.css
+++ b/src/main-page/side-style.css
@@ -3,7 +3,8 @@
     height: 100%;
     gap: 16px;
     padding: 1em;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   .pre-made,
   .user-made {
